# aml_exam

./: .gitignore  README.md  SHAP-guide.md  X_test.npy  eda.ipynb  eda.py  example.ipynb  experiment_tracking.py  preprocessor.py  pyproject.toml  task2.ipynb  task3.py  test.ipynb
data/: data.py
kris/: clustering.ipynb  eda.ipynb  eda.py  eda_demo.py  shallow_learners.py
lasse/: data.py  preprocessor.py  task2.py  task3.py
lasse/shap_app/: __init__.py  adapters.py  config.py  plotting.py  run_shap.py
mircea/: clean_exam_attempt.ipynb
notebooks/: eda.ipynb
rheannon/: allinone.ipynb  requirements.txt  shallow_shap.ipynb  shap-wip.ipynb  shap_deep.ipynb
rheannon/lasse/: README.md  main.py  pyproject.toml  requirements.txt
rheannon/mircea/: exam_shallow_learners.ipynb
rheannon/results/: svc.pkl  (+32 more)
shap_app/: explainers.py  io_utils.py  plotting.py
shap_outputs/: expected_values.npy  shap_values.npy
src/: task2.py  task3.py
tariq-notes/: DSK807_AML_E01_solutions.ipynb  DSK807_AML_E02.ipynb  DSK807_AML_E02_solutions.ipynb  DSK807_AML_Feature_Engineering.ipynb  DSK807_AML_L01.ipynb  DSK807_AML_L02.ipynb  DSK807_AML_L03.ipynb  DSK807_AML_L04.ipynb  DSK807_AML_L05.ipynb  DSK807_AML_L06.ipynb  DSK807_AML_L07.ipynb  DSK807_AML_L08.ipynb  DSK807_AML_L09.ipynb  DSK807_AML_L11_Audio_Classification.ipynb  DSK807_AML_L11_Features_Engineering.ipynb  DSK807_AML_L12.ipynb  DSK807_AML_L13.ipynb  DSK807_AML_L15_(CAM).ipynb  DSK807_AML_L16.ipynb  DSK807_AML_L17_(Audio).ipynb  DSK807_AML_L17_(Machine_Translation).ipynb  DSK807_AML_L17_(Text_Generation).ipynb  DSK807_AML_L19_Transformers.ipynb  DSK807_AML_L19_ViT.ipynb  DSK807_AML_L20_Autoencoders.ipynb  DSK807_AML_L20_VAEs.ipynb  DSK807_AML_MobileNetV2.ipynb
(+41 files in other folders)
