[project]
name = "aml-exam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0",
    "imbalanced-learn>=0.14.1",
    "ipykernel>=7.1.0",
    "lifelines>=0.30.0",
    "marimo>=0.18.4",
    "matplotlib>=3.10.8",
    "mlflow>=3.7.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "ruff>=0.14.10",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "tensorflow>=2.20.0",
    "xgboost>=3.1.2",
]
