[project]
name = "aml-exam"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=6.0.0",
    "ipykernel>=7.1.0",
    "knockknock>=0.1.8.1",
    "marimo>=0.18.4",
    "matplotlib>=3.10.8",
    "mlflow>=3.7.0",
    "nbformat>=5.10.4",
    "numpy>=2.3.5",
    "openai>=2.11.0",
    "pandas>=2.3.3",
    "polars>=1.36.1",
    "ruff>=0.14.9",
    "scikit-learn<1.7",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "tabpfn>=2.0.3",
    "tensorflow>=2.20.0",
    "tf-keras>=2.20.1",
    "transformers>=4.57.3",
    "xgboost>=3.1.2",
]
